db-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: freshrss-db
  namespace: freshrss
spec:
  selector:
    matchLabels:
      app: freshrss-db-pod # has to match .spec.template.metadata.labels
  serviceName: "db-svc"
  replicas: 1 # by default is 1
  template:
    metadata:
      labels:
        app: freshrss-db-pod # has to match .spec.selector.matchLabels
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: freshrss-db
          image: postgres:17-alpine
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - name: lh-db-pvc
              mountPath: /var/lib/postgresql
  volumeClaimTemplates:
    - metadata:
        name: lh-db-pvc
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: "longhorn"
        resources:
          requests:
            storage: 2Gi
