app-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: svc-app
  namespace: freshrss
spec:
  selector:
    name: freshrss-app-pod
  type: ClusterIP
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
