db-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: db-svc
  namespace: freshrss
spec:
  selector:
    app: freshrss-db-pod
  type: ClusterIP
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
