ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: freshrss-ingress
  namespace: freshrss
  labels:
    name: freshrss
  annotations:
    spec.ingressClassName: traefik
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - rss
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: app-svc
                port:
                  number: 80
